4B/cs444/tests/site/pass/pass_interfaces.joos
/* pass: public interfaces */
  public interface A {}

