4B/cs444/tests/site/fail/fail_ppinterfaces.joos
/* fail: package private interfaces */
  interface A {}

